Add an img tag and remove the background-image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="card-container">
         <div class="card">
             <div class="card-face card-front">
-                <div class="product-image"></div>
+                <div class="product-image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRh96YOSmdw65Xro-7uOu_21ROsQz452iOscA&s" alt="water bottle" loading="lazy">
+                </div>
                 <h2>Eco-Friendly Water Bottle</h2>
                 <p>Stay hydrated in style</p>
                 <div class="price">&dollar;24.99</div>
